# objectapi-demos

./: .gitignore  README.md
calc/apis/: calculator.oapi.yaml
calc/cpp14/ini/: test.sh
calc/cpp14/ini/apigear_calc/: calculator.cpp  calculator.test.cpp
calc/cpp14/ini/apigear_calc/apig/: apigear_calc.apig.cpp  apigear_calc.trace.cpp
calc/cpp14/sol/: CMakeLists.txt  test.sh
calc/cpp14/sol/apigear_calc/: CMakeLists.txt  calculator.cpp  calculator.h  calculator.test.cpp  conanfile.py
calc/cpp14/sol/apigear_calc/apig/: apigear_calc.apig.h  apigear_calc.trace.h
calc/cpp14/sol/apigear_calc/apigear/: tracer.cpp  tracer.h
calc/cpp14/sol/apigear_calc/test_package/: CMakeLists.txt  conanfile.py  main.cpp
calc/cpp14/sol/app/: CMakeLists.txt  conanfile.txt  main.cpp
calc/golang/: Makefile
calc/golang/ini/apigear/calc/: calculator.go  calculator_test.go
calc/golang/ini/apigear/calc/api/: api.go
calc/golang/sol/apigear/calc/: calculator.go  calculator_test.go
calc/golang/sol/cmd/: main.go
calc/python/: Makefile
calc/python/ini/apigear_calc/: calculator.py  test_calculator.py
calc/python/ini/apigear_calc/api/: api.py
calc/python/sol/: Makefile  main.py
calc/python/sol/apigear_calc/: calculator.py  test_calculator.py
calc/qtcpp/: Makefile
calc/qtcpp/ini/: CMakeLists.txt
calc/qtcpp/ini/apigear_calc/: CMakeLists.txt  calculator.cpp  calculator.h  qmlcalculator.h  tst_calculator.cpp
calc/qtcpp/ini/apigear_calc/api/: api.h  tracer.h
calc/qtcpp/ini/plugin_apigear_calc/: plugin.cpp
calc/qtcpp/ini/shared/: traceclient.h
calc/qtcpp/sol/: CMakeLists.txt
calc/qtcpp/sol/apigear_calc/: CMakeLists.txt  api.cpp  calculator.cpp  calculator.h  factory.cpp  factory.h  qmlcalculator.cpp  tracer.cpp  tst_calculator.cpp  tst_calculator.h
calc/qtcpp/sol/apigear_calc/api/: tracer.cpp
calc/qtcpp/sol/app/: CMakeLists.txt  console.cpp  console.h  main.cpp
calc/qtcpp/sol/plugin_apigear_calc/: CMakeLists.txt  plugin.cpp  qmldir
calc/qtcpp/sol/qmlapp/: CMakeLists.txt  main.cpp  main.qml
calc/typescript/: Makefile
calc/typescript/ini/apigear_calc/: api.ts  calculator.test.ts  calculator.ts  factory.ts
calc/typescript/sol/: package.json  tsconfig.json
calc/typescript/sol/src/: index.ts
calc/typescript/sol/src/apigear_calc/: calculator.test.ts  calculator.ts
dice/apis/: apigear.game.oapi.yaml
dice/cpp14/ini/: test.sh
dice/cpp14/ini/apigear_game/: dice.cpp  dice.h  dice.test.cpp  random.cpp  random.test.cpp
dice/cpp14/ini/apigear_game/apig/: apigear_game.apig.cpp  apigear_game.apig.h  apigear_game.trace.cpp  apigear_game.trace.h
dice/cpp14/sol/: CMakeLists.txt
dice/cpp14/sol/apigear_game/: CMakeLists.txt  conanfile.py  dice.cpp  dice.test.cpp  random.cpp  random.h  random.test.cpp
dice/cpp14/sol/apigear_game/apigear/: tracer.test.cpp
dice/cpp14/sol/apigear_game/test_package/: CMakeLists.txt  conanfile.py  main.cpp
dice/cpp14/sol/app/: CMakeLists.txt  conanfile.txt  main.cpp
dice/golang/: Makefile
dice/golang/ini/apigear/game/: dice.go  dice_test.go  random.go  random_test.go
dice/golang/sol/apigear/game/: dice.go  dice_test.go  random.go  random_test.go
dice/golang/sol/apigear/game/api/: api.go
dice/golang/sol/cmd/: main.go
dice/python/: Makefile
dice/python/ini/apigear_game/: dice.py  random.py  test_dice.py  test_random.py
dice/python/ini/apigear_game/api/: api.py
dice/python/sol/: main.py
dice/python/sol/apigear_game/: dice.py  random.py  test_dice.py  test_random.py
dice/qtcpp/: Makefile
dice/qtcpp/ini/: CMakeLists.txt
dice/qtcpp/ini/apigear_game/: CMakeLists.txt  api.cpp  api.h  dice.cpp  dice.h  factory.cpp  qmldice.cpp  qmlrandom.cpp  random.cpp  tracer.h  tst_dice.cpp  tst_dice.h  tst_random.cpp
dice/qtcpp/sol/: CMakeLists.txt
dice/qtcpp/sol/apigear_game/: dice.cpp  dice.h  factory.cpp  factory.h  qmldice.h  qmlrandom.h  random.cpp  random.h  tracer.cpp  tst_dice.cpp  tst_random.cpp  tst_random.h
dice/qtcpp/sol/app/: CMakeLists.txt  console.cpp  console.h
dice/qtcpp/sol/plugin_apigear_game/: CMakeLists.txt  plugin.cpp  qmldir
dice/qtcpp/sol/qmlapp/: CMakeLists.txt  main.cpp  main.qml
dice/qtcpp/sol/shared/: traceclient.cpp
dice/typescript/: Makefile
dice/typescript/ini/apigear_game/: dice.test.ts  dice.ts  factory.ts  random.test.ts  random.ts
dice/typescript/sol/: tsconfig.json
dice/typescript/sol/src/: index.ts
dice/typescript/sol/src/apigear_game/: api.ts  dice.test.ts  dice.ts  factory.ts  random.test.ts  random.ts
